--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,10 @@ java {
     modularity.inferModulePath = true
 }
 
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
+}
+
 repositories {
     mavenCentral()
 }
@@ -47,7 +51,7 @@ jlink {
         name = 'NonNewtonian Table'
     }
     jpackage {
-        appVersion = 1
+        appVersion = '1.0.0'
         installerOutputDir = file("$buildDir/installers")
     }
 }
